test/classes/override/override-iter-missing.good
override-iter-missing.chpl:11: error: Child.myiter overrides parent class method Parent.myiter but missing override keyword
override-iter-missing.chpl:14: error: Child.these overrides parent class method Parent.these but missing override keyword
